--- a/css/admin/stylesheet_admin.css
+++ b/css/admin/stylesheet_admin.css
@@ -70,6 +70,8 @@ nav {
   height: 100%;
   grid-column-start: 1;
   grid-column-end: 1;
+  border-right: 2px solid rgb(193,193,193);
+  margin-top: 1em;
 }
 .linker_nav ul{
   list-style: none; 
@@ -86,6 +88,9 @@ nav {
   font-size: 1.3em;
 }
 
+.linker_nav ul a:hover{
+  color: #1BBCB6;
+}
 /* keer terug + zoeken container binnen pagina zelf */
 .keer_terug{
   display: flex;
@@ -166,6 +171,7 @@ nav {
 
 .uitleningen_dashboard_container{
   width: 100%;
+  margin-top: 2em;
 }
 .uitleningen_dashboard_details{
   display: flex;
@@ -175,10 +181,40 @@ nav {
   border-radius: 2em;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 1em;
 }
 .naam_reservatieID{
   margin-left: 2em;
 }
 .naam_reservatieID span{
-  font-weight:normal;
+  font-weight: normal;
+}
+.iconen{
+  display: flex;
+  margin-right: 2em;
+}
+.iconen img{
+  width: 2em;
+  height: 2em;
+  margin: 0.5em;
+}
+.check{
+  filter: invert(58%) sepia(17%) saturate(6855%) hue-rotate(139deg)
+  brightness(103%) contrast(79%);
+}
+.verwijder{
+  filter: invert(13%) sepia(91%) saturate(6506%) hue-rotate(353deg) brightness(88%) contrast(103%);
+}
+
+.uitlening_toevoegen{
+  background-color: #1BBCB6;
+  text-align: center;
+  width: 23%;
+  border-radius: 2em;
+  margin-left: 4em;
+  margin-top: 2em;
+}
+.uitlening_toevoegen a{
+  text-decoration: none;
+  color: white;
 }
