--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,7 +24,13 @@ h3 {
 
 /* bovenste navigatie */
 
+.navbar_container{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
 nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
@@ -133,7 +139,8 @@ nav ul li a {
 .categorie{
   width: 100%;
   height: 15em;
-  display: block
+  display: block;
+  device-width: 100%;
 }
 .categorie a h1{
 }
