--- a/css/admin/stylesheet_admin.css
+++ b/css/admin/stylesheet_admin.css
@@ -295,3 +295,52 @@ nav {
   font-weight: normal;
   margin-left: 0.5em;
 }
+
+/* kits  */
+
+.kit_container{
+  background-color: #D9D9D9;
+  border: #D9D9D9;
+  border-radius: 1em;
+  padding: 1em;
+  margin: 1em;
+}
+
+.kit_visueel img{
+height: auto;
+width: 4em;
+}
+.kit_visueel_img img {
+  background-color: #fff;
+}
+
+.kit_visueel_small img{
+  height: auto;
+  width: 1em;
+}
+
+.kit_visueel{
+  display: flex;
+  align-items: center;
+  margin: 1em;
+  
+}
+.kit_verwijder_kit img{
+  width: 1em;
+  height: auto;
+  margin-left: 1em;
+  filter: invert(100%) sepia(0%) saturate(5878%) hue-rotate(26deg) brightness(116%) contrast(115%);
+}
+
+.kit_wijzig_kit img{
+  width: 1em;
+  height: auto;
+  margin-left: 1em;
+  filter: invert(100%) sepia(0%) saturate(5878%) hue-rotate(26deg) brightness(116%) contrast(115%);
+}
+
+.kit_acties{
+text-decoration: none;
+margin: 0em 1em 0em 4em;
+
+}
