--- a/css/admin/stylesheet_admin.css
+++ b/css/admin/stylesheet_admin.css
@@ -297,35 +297,67 @@ nav {
 }
 
 /* kits  */
-
+.kit_informatie span{
+  color: #5B5B5B;
+}
 .kit_container{
   background-color: #D9D9D9;
   border: #D9D9D9;
   border-radius: 1em;
   padding: 1em;
-  margin: 1em;
+  margin: 1.5em;
 }
 
-.kit_visueel img{
-height: auto;
-width: 4em;
-}
 .kit_visueel_img img {
   background-color: #fff;
+  padding: 1,5em;
+  margin: 1em;
+  height: auto;
+width: 7em;
+padding: 1em;
 }
 
 .kit_visueel_small img{
   height: auto;
   width: 1em;
+  padding: 1em;
+
+}
+
+.kit_verwijder_kit a{
+  background-color: #E30613;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: #E30613;
+  border-radius: 2em;
+  width: 8.5em;
+  height: 1em;
+  text-decoration: none;
+  color: white;
+  padding: 1em;
+  margin: 1em;
+}
+.kit_wijzig_kit a{
+  background-color: #1BBCB6;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: #1BBCB6;
+  border-radius: 2em;
+  width: 8.5em;
+  height: 1em;
+  text-decoration: none;
+  color: white;
+  padding: 1em;
+  margin: 1em;
 }
 
 .kit_visueel{
   display: flex;
   align-items: center;
-  margin: 1em;
-  
 }
-.kit_verwijder_kit img{
+.kit_verwijder_kit a img{
   width: 1em;
   height: auto;
   margin-left: 1em;
@@ -341,6 +373,20 @@ width: 4em;
 
 .kit_acties{
 text-decoration: none;
-margin: 0em 1em 0em 4em;
+margin: 0em 1em 0em 1em;
 
+}
+
+.kit_add{
+  background-color: #D9D9D9;
+  margin: 1.5em;
+  padding: 0.5em;
+  border-radius: 2em;
+  height: auto;
+  width: 7em;
+}
+
+.kit_add a{
+  color: #5B5B5B;
+  text-decoration: none;
 }
