--- a/css/admin/stylesheet_admin.css
+++ b/css/admin/stylesheet_admin.css
@@ -390,3 +390,131 @@ margin: 0em 1em 0em 1em;
   color: #5B5B5B;
   text-decoration: none;
 }
+
+/* Info page  */
+body{
+  display: flex;
+}
+.info_uitleen_uitleg img{
+  height: auto;
+  width: 1em;
+  filter: invert(100%) sepia(0%) saturate(5878%) hue-rotate(26deg) brightness(116%) contrast(115%);
+}
+.info-opening-hours img{
+  height: auto;
+  width: 1em;
+}
+.info-sancties img{
+  height: auto;
+  width: 1em;
+}
+
+.info-defect img{
+  height: auto;
+  width: 1em;
+}
+
+.info_uitleen_uitleg h2 {
+  padding-left: 1em;
+}
+.info_uitleen_uitleg ul li h3 {
+  color: white;
+}
+.info_uitleen_uitleg ul li p {
+  font-size: 0.75em;
+  padding: 1em;
+}
+.info_uitleen_uitleg{
+padding-bottom: 4em;
+}
+.info_uitleen_uitleg ul {
+  list-style: none;
+  display: flex;
+  margin-top: 1em;
+  justify-content: space-between;
+  margin: auto;
+  width: 85%;
+
+}
+.info_uitleen_uitleg h2 {
+  margin: 1em 0em;
+}
+.info_uitleen_uitleg ul li {
+  width: 8.5em;
+  height: 10em;
+  border-radius: 1em;
+  text-align: center;
+  background-color: #1bbcb6;
+  text-decoration: none;
+  padding: 1em;
+  color: white;
+}
+
+/* openings uren  */
+.info-opening-hours h1{
+  padding: 0.5em;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.info-opening-hours {
+    padding: 0em 1em 0em 0em;
+    margin-bottom: 1em;
+  }
+.info-opening-hours table {
+  margin: auto;
+  width: 80%;
+  border-collapse: collapse;
+  }
+  
+.info-opening-hours h1 {
+    padding: 0em 0em 0.5em 0em;
+    text-align: left;
+    margin: 0em 0em 1em 2em;
+  }
+
+.info-opening-hours table,th,td {
+    text-align: center;
+    padding: 1.5em;
+}
+.info-opening-hours table th {
+    text-align: start;
+    border: none;
+    border-bottom: 2px solid rgb(193, 193, 193);
+  }
+  .info-opening-hours table td{
+    border: none;
+    border-bottom: 2px solid rgb(193, 193, 193);
+    border-left: 2px solid rgb(193, 193, 193);
+  }
+  .info-opening-hours table tr:last-child th, .info-opening-hours table tr:last-child td{
+    height: 2em;
+    border-bottom: none;
+  }
+
+  .info-opening-hours td  {
+    border: 0.1em solid black;
+  }
+
+  .info-opening-hours th {
+    border: 0.1em solid black;
+  }
+
+/* sancties/defect  */
+
+.info-sancties{
+    margin: 1em 0em 1em 3em;
+}
+.info-sancties h2 p{
+  margin: 2em  0em 1em 0em;
+}
+.info-sancties p b{
+    color: #E30613;
+}
+.info-sancties p, .info-defect p{
+  width: 95%;
+}
+
+.info-defect{
+    margin: 2em 0em 1em 3em;
+}
