--- a/css/admin/stylesheet_admin.css
+++ b/css/admin/stylesheet_admin.css
@@ -392,9 +392,10 @@ margin: 0em 1em 0em 1em;
 }
 
 /* Info page  */
-body{
+.info_body{
   display: flex;
 }
+
 .info_uitleen_uitleg img{
   height: auto;
   width: 1em;
@@ -421,7 +422,7 @@ body{
   color: white;
 }
 .info_uitleen_uitleg ul li p {
-  font-size: 0.75em;
+  font-size: 0.8em;
   padding: 1em;
 }
 .info_uitleen_uitleg{
@@ -440,7 +441,7 @@ padding-bottom: 4em;
   margin: 1em 0em;
 }
 .info_uitleen_uitleg ul li {
-  width: 8.5em;
+  width: 11.5em;
   height: 10em;
   border-radius: 1em;
   text-align: center;
@@ -517,4 +518,98 @@ padding-bottom: 4em;
 
 .info-defect{
     margin: 2em 0em 1em 3em;
+}
+
+/* defect page  */
+.defect_container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.defect_container{
+  background-color: #D9D9D9;
+  border: #D9D9D9;
+  border-radius: 1em;
+  padding: 1em;
+  margin: 1.5em;
+}
+
+.defect_informatie span{
+  color: #5B5B5B;
+}
+
+.defect_visueel_img img {
+  background-color: #fff;
+  padding: 1,5em;
+  margin: 1em;
+  height: auto;
+width: 7em;
+padding: 1em;
+}
+
+.defect_hersteld a{
+  background-color: #1BBCB6;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: #1BBCB6;
+  border-radius: 2em;
+  width: 8.5em;
+  height: 1em;
+  text-decoration: none;
+  color: white;
+  padding: 1em;
+  margin: 1em;
+}
+.defect_verwijder a{
+  background-color: #E30613;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: #E30613;
+  border-radius: 2em;
+  width: 8.5em;
+  height: 1em;
+  text-decoration: none;
+  color: white;
+  padding: 1em;
+  margin: 1em;
+}
+
+.defect_visueel{
+  display: flex;
+  align-items: center;
+}
+.defect_hersteld a img{
+  width: 1em;
+  height: auto;
+  margin-left: 1em;
+  filter: invert(100%) sepia(0%) saturate(5878%) hue-rotate(26deg) brightness(116%) contrast(115%);
+}
+
+.defect_verwijder img{
+  width: 1em;
+  height: auto;
+  margin-left: 1em;
+  filter: invert(100%) sepia(0%) saturate(5878%) hue-rotate(26deg) brightness(116%) contrast(115%);
+}
+.defect_acties{
+text-decoration: none;
+margin: 0em 1em 0em 1em;
+
+}
+
+.defect_add{
+  background-color: #D9D9D9;
+  margin: 1.5em;
+  padding: 0.5em;
+  border-radius: 2em;
+  height: auto;
+  width: 10em;
+}
+
+.defect_add a{
+  color: #5B5B5B;
+  text-decoration: none;
 }
