--- a/css/admin/stylesheet_admin.css
+++ b/css/admin/stylesheet_admin.css
@@ -352,6 +352,83 @@ padding: 1em;
   margin-left: 0.5em;
 }
 
+/* inventaris toevoegen  */
+.inventaris_toe_specificaties{
+  margin: 1em;
+  background-color: #D9D9D9;
+  border-radius: 2em;
+  padding: 2em;
+}
+.inventaris_toe{
+  display: flex;
+  margin: 2em 2em 2em 0em;
+}
+.inventaris_toe h2{
+  margin: 0em 1em 0em 0em;
+}
+.inventaris_toe input{
+  background-color: #fff;
+  border-radius: 2em;
+  border: 0;
+  width: 17em;
+  height: 1em;
+  padding: 1em;
+}
+.inventaris_toe_block{
+  display: flex;
+}
+.inventaris_toe_img button{
+  width: 5em;
+  height: auto;
+  cursor: pointer;
+  margin: 0.5em 1em 0em 8em ;
+  background-color: #D9D9D9;
+  border: 0;
+}
+.inventaris_toe_text input{
+  height: 15em;
+  width: 100%;
+  border: 0;
+  border-radius: 2em;
+}
+.inventaris_toe_verwijderen button{
+  background-color: #E30613;
+  border-radius: 2em;
+  width: 15em;
+  height: 3em;
+  border: 0;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  margin: 1em 2em 0em 0em;
+  display: flex;
+  align-items: center;
+  padding: 0em 0em 0em 1em;
+}
+.inventaris_toe_opslaan button{
+  background-color: #1BBCB6;
+  border-radius: 2em;
+  width: 15em;
+  height: 3em;
+  border: 0;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  margin: 1em 0em 0em 0em;
+}
+.inventaris_toe_buttons{
+  display: flex;
+  justify-content: center;
+}
+.inventaris_toe_verwijderen img{
+  width: 1em;
+  height: auto;
+  margin: 0em 0em 0em 0.5em;
+  filter: invert(100%) sepia(0%) saturate(5878%) hue-rotate(26deg) brightness(116%) contrast(115%);
+}
+
+
+
 /* kits  */
 .kit_informatie span{
   color: #5B5B5B;
