--- a/css/admin/stylesheet_admin.css
+++ b/css/admin/stylesheet_admin.css
@@ -690,3 +690,60 @@ margin: 0em 1em 0em 1em;
   color: #5B5B5B;
   text-decoration: none;
 }
+
+/* defect toevoegen page  */
+.Info_rechter_grid{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.defect_toe{
+  display: flex;
+  align-items: center;
+  margin: 1em;
+}
+.defect_toe img{
+  width: 2em;
+  height: auto;
+  margin: 1em;
+  cursor: pointer;
+}
+.defect_toe input{
+  margin: 1.5em;
+  border-radius: 2em;
+  border: 0;
+  background-color: #D9D9D9;
+  height: 2em;
+  width: 15em;
+  padding: 1em;
+}
+.defect_toe_textbox h2{
+  margin: 1em 0em 1em 1em;
+
+}
+.defect_toe_text input{
+  height: 15em;
+  width: 95%;
+  border: 0;
+  border-radius: 1em;
+  background-color: #D9D9D9;
+  padding: 1em 0em 1em 1em;
+  margin: 1em;
+}
+
+.defect_toe_bevestig button{
+  background-color: #1BBCB6;
+  border-radius: 2em;
+  width: 10em;
+  height: 2em;
+  border: 0;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  margin: 1em 0em 0em 0em;
+  font-size:1em;
+}
+.defect_toe_bevestig{
+  display: flex;
+  justify-content: center;
+}
